--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,6 @@
 pipeline {
-  agent any
-
+  agent { docker { image 'python:3.10.1-alpine' } }
+  
  stages {
      stage('Checkout') {
             steps {
