--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,5 +1,6 @@
 pipeline {
-  agent { docker { image 'python:3.10.1-alpine' } }
+  agent 
+    docker { image 'python:3.10.1-alpine' } }
   
  stages {
      stage('Checkout') {
