--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,9 @@
 pipeline {
-  agent 
-    docker { image 'python:3.10.1-alpine' } }
+  agent {
+    docker { 
+        image 'python:3.10.1-alpine' 
+        }
+  }
   
  stages {
      stage('Checkout') {
