--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@ pipeline {
         image 'cytopia/pylint:latest'
         }
   }
-  
+
  stages {
      stage('Checkout') {
             steps {
@@ -15,6 +15,7 @@ pipeline {
 
 stage('lint'){
    steps {
+        sh "apt install virtualenv -y"
         sh "virtualenv --python=/usr/bin/python3 venv"
         sh "export TERM='linux'"  
         sh 'pylint --rcfile=pylint.cfg funniest/ $(find . -maxdepth 3 -name "*.py" -print) --msg-template="{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}" > pylint.log || echo "pylint exited with $?"'
@@ -42,13 +43,7 @@ stage('test'){
            
         echo "Testing Success"   
           }  
-        }
-       
-stage('mail'){
-        steps{
-            emailext attachLog: true, body: 'Jenkins Build - Status Report', subject: 'Build Report', to: 'zeyad.abuqasem@gmail.com'
-        }
-    }   
-
-       }
+        } 
+    }
 }
+
