--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,10 +1,10 @@
 pipeline {
   agent {
     docker { 
-        image 'cytopia/pylint:latest'
+        image 'ubuntu:latest' 
         }
   }
-
+  
  stages {
      stage('Checkout') {
             steps {
@@ -12,38 +12,9 @@ pipeline {
                 echo 'CheckOut Success'
             }
         }
-
-stage('lint'){
-   steps {
-        sh "apt install virtualenv -y"
-        sh "virtualenv --python=/usr/bin/python3 venv"
-        sh "export TERM='linux'"  
-        sh 'pylint --rcfile=pylint.cfg funniest/ $(find . -maxdepth 3 -name "*.py" -print) --msg-template="{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}" > pylint.log || echo "pylint exited with $?"'
-        sh "rm -r venv/"
-       
-        echo "linting Success, Generating Report"
-         
-        warnings canComputeNew: false, canResolveRelativePaths: false, defaultEncoding: '', excludePattern: '', healthy: '', includePattern: '', messagesPattern: '', parserConfigurations: [[parserName: 'PyLint', pattern: '*']], unHealthy: ''
-       
-       }   
-     }
-      
-stage('test'){
-   steps {
-         
-        sh "pytest --cov ./ --cov-report html --verbose"
-        publishHTML(target:
-            [allowMissing: false,
-              alwaysLinkToLastBuild: false,
-            keepAll: false,
-            reportDir: 'htmlcov',
-            reportFiles: 'index.html',
-            reportName: 'Test Report',
-            reportTitles: ''])  
-           
-        echo "Testing Success"   
-          }  
-        } 
-    }
+        stage('Install Requirements'){
+            sh "apt install python3 python3-pip"
+            echo 'Done'
+        }
+ }
 }
-
