--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,8 +13,10 @@ pipeline {
             }
         }
         stage('Install Requirements'){
+            steps{
             sh "apt install python3 python3-pip"
             echo 'Done'
+            }
         }
  }
 }
