--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,22 +1,10 @@
 pipeline {
-  agent {
-    docker { 
-        image 'ubuntu:latest' 
-        }
-  }
-  
+  agent { dockerfile true }
  stages {
-     stage('Checkout') {
+    stage('Test') {
             steps {
-                git credentialsId: 'jenkins', url: 'https://github.com/zprgx/dockerized-django.git'
-                echo 'CheckOut Success'
+                sh 'python3 -V'
             }
-        }
-        stage('Install Requirements'){
-            steps{
-            sh "sudo apt install python3 python3-pip"
-            echo 'Done'
-            }
-        }
  }
+}
 }
